<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/situation_background"
    tools:context=".Situation_Ques">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="335dp"
        android:layout_height="30dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressbarsituation"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="335dp"
            android:layout_height="30dp"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/custom_progress_situation" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/time_sit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#00000000"

                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/timeclock" />
        </RelativeLayout>


    </FrameLayout>

    <TextView
        android:id="@+id/textView9"
        style="@style/what_would_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/situation_string_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView9">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/situation_ques"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="62dp"
                app:srcCompat="@drawable/situation_button_theme"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/textView6"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/yes_not_select"
                android:onClick="on_click_bt1"
                android:padding="10dp"
                android:text="@string/yes"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_below="@id/imageView7"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/yes_not_select"
                android:onClick="on_click_bt2"
                android:padding="10dp"
                android:text="@string/no"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_below="@id/imageView7"
                android:layout_alignParentEnd="true"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="135dp"
                android:layout_height="52dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/situation_next_button"
                android:text="@string/next_button"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@id/button8"
                android:layout_alignParentEnd="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="60dp"
                android:layout_below="@id/button5">

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
